--- a/bower.json
+++ b/bower.json
@@ -18,9 +18,7 @@
     "tests"
   ],
   "dependencies": {
-    "foundation": "~5.5.1"
-  },
-  "resolutions": {
-    "foundation": "~5.5.1"
+    "foundation": "~5.5.1",
+    "fontawesome": "~4.4.0"
   }
 }
