--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
   ],
   "dependencies": {
     "foundation": "~5.5.1",
-    "fontawesome": "~4.4.0"
+    "fontawesome": "~4.4.0",
+    "jquery.tablesorter": "~2.23.4"
   }
 }
